--- a/app/src/main/res/layout/custom_dialogbox_register.xml
+++ b/app/src/main/res/layout/custom_dialogbox_register.xml
@@ -9,7 +9,7 @@
         android:id="@+id/tvHeading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Welcome to Sport Club HQ"
+        android:text="Welcome to Baseball NSW"
         android:background="@color/colorPrimary"
         android:padding="20dp"
         android:gravity="center"
