--- a/app/src/main/res/layout/fragment_media_vc.xml
+++ b/app/src/main/res/layout/fragment_media_vc.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_centerInParent="true"
-        android:text="Sports Club HQ"
+        android:text="Baseball NSW"
         android:elevation="5dp"
         android:textColor="@color/colorPrimary"
         android:layout_below="@+id/progressBar_media_main"
@@ -42,8 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/grid_cell_height_small"
         android:orientation="vertical"
-        android:layout_alignParentBottom="true"
-        >
+        android:layout_alignParentBottom="true">
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -82,7 +81,6 @@
     </LinearLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/swiperefresh"
@@ -93,8 +91,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/list"
-            >
-        </ListView>
+            />
     </android.support.v4.widget.SwipeRefreshLayout>
 
 
