--- a/app/src/main/res/layout/main_image_cell.xml
+++ b/app/src/main/res/layout/main_image_cell.xml
@@ -67,7 +67,7 @@
                     android:id="@+id/flagButton"
                     android:layout_width="@dimen/flag_button_width"
                     android:layout_height="@dimen/flag_button_width"
-                    android:background="@drawable/flaglight"
+                    android:background="@drawable/flag"
                     android:elevation="10dp"
                     android:layout_margin="10dp"
                     />
@@ -97,7 +97,7 @@
                         android:id="@+id/bodyIV"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/splashlogo"
+                        android:src="@drawable/logo_log_in"
                         android:scaleType="fitXY"
                         android:adjustViewBounds="true"
 
@@ -143,9 +143,11 @@
                 android:layout_height="0dp"
                 android:text="Third row of text"
                 style="@style/textview_small"
+                android:padding="5dp"
                 android:singleLine="true"
                 android:gravity="bottom|left"
-                android:layout_gravity="bottom|left"/>
+                android:layout_gravity="bottom|left"
+                android:layout_marginStart="15dp" />
 
         </LinearLayout>
 
