--- a/app/src/main/res/drawable/notice_shape.xml
+++ b/app/src/main/res/drawable/notice_shape.xml
@@ -5,5 +5,5 @@
         android:topRightRadius="10dp"
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp" />
-    <solid android:color="@color/black" />
+    <solid android:color="@color/white" />
 </shape>
