--- a/app/src/main/res/layout/activity_group_vc.xml
+++ b/app/src/main/res/layout/activity_group_vc.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<ScrollView xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="@color/white">
 
 
@@ -69,7 +69,7 @@
                         />
 
                     <TextView
-                        android:id="@+id/tv_grp_title"
+                        android:id="@+id/group_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
@@ -132,7 +132,7 @@
             android:elevation="10dp"
             android:textAlignment="center"
             android:layout_marginLeft="10dp"
-            app:tabGravity="fill"
+            app:tabGravity="center"
             app:tabMaxWidth="0dp"
             app:tabTextColor="@color/gray"
             android:layout_marginRight="10dp"
@@ -141,12 +141,9 @@
             app:tabTextAppearance="@style/MineCustomTabText" />
 
         <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context="com.hq.sportshqnetwork.GroupVC"
+            tools:context=".GroupsVC"
             android:orientation="vertical"
             android:layout_below="@+id/tabs"
             android:background="@drawable/layout_shape">
@@ -169,8 +166,6 @@
                 android:layout_weight="1"
                 android:paddingTop="10dp"
                 />
-
-
 
         </LinearLayout>
     </RelativeLayout>
