--- a/app/src/main/res/layout/main_cell.xml
+++ b/app/src/main/res/layout/main_cell.xml
@@ -55,7 +55,9 @@
         android:layout_alignTop="@id/speach_image"
         android:orientation="vertical"
         android:weightSum="3"
-        android:layout_margin="@dimen/small_pad">
+        android:layout_margin="@dimen/small_pad"
+        android:layout_alignRight="@id/speach_image"
+        android:layout_alignLeft="@id/speach_image">
 
         <!-- first Row-->
         <LinearLayout
@@ -77,7 +79,7 @@
                 android:id="@+id/flagButton"
                 android:layout_width="@dimen/flag_button_width"
                 android:layout_height="@dimen/flag_button_width"
-                android:background="@drawable/flaglight"
+                android:background="@drawable/flag"
                 android:visibility="gone"
                 />
 
