--- a/app/src/main/res/layout/main_cell_item.xml
+++ b/app/src/main/res/layout/main_cell_item.xml
@@ -22,7 +22,7 @@
                 android:layout_width="@dimen/user_image_width"
                 android:layout_height="@dimen/user_image_width"
                 android:id="@+id/imageView"
-                android:src="@drawable/splashlogo"
+                android:src="@drawable/logo_log_in"
                 app:civ_border_width="0dp"
                 android:layout_margin="5dp"
                 app:civ_border_color="#FF000000"
@@ -68,7 +68,7 @@
                     android:id="@+id/flagButton"
                     android:layout_width="@dimen/flag_button_width"
                     android:layout_height="@dimen/flag_button_width"
-                    android:background="@drawable/flaglight"
+                    android:background="@drawable/flag"
                     android:elevation="10dp"
                     android:layout_margin="10dp"
                     />
