--- a/app/src/main/res/layout/media_cell.xml
+++ b/app/src/main/res/layout/media_cell.xml
@@ -78,7 +78,7 @@
         android:id="@+id/flagButton"
         android:layout_width="@dimen/flag_button_width"
         android:layout_height="@dimen/flag_button_width"
-        android:background="@drawable/flaglight"
+        android:background="@drawable/flag"
         android:layout_alignParentRight="true"
         android:visibility="gone"
         />
