--- a/app/src/main/res/layout/fragment_ladders.xml
+++ b/app/src/main/res/layout/fragment_ladders.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp">
@@ -48,7 +49,8 @@
         android:id="@+id/ll_second"
         android:layout_below="@+id/ll_main"
         android:layout_margin="10dp"
-        android:background="@android:color/transparent">
+        android:background="@android:color/transparent"
+        android:visibility="visible">
 
         <TextView
             android:layout_weight="3.2"
@@ -103,102 +105,109 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="10"
-        android:id="@+id/ll_third"
+        android:orientation="vertical"
         android:layout_below="@+id/ll_second"
-        android:layout_margin="10dp"
-        android:background="@android:color/transparent">
+        android:id="@+id/ll_landscape"
+        android:visibility="gone">
 
-        <TextView
-            android:layout_weight="3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/team"
-            android:layout_gravity="center"
-            android:id="@+id/tv_t"
-            android:layout_marginLeft="10dp"/>
-        
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="9">
-
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="W"
-                android:layout_gravity="center"
-                android:id="@+id/tv_t_1"/>
+            android:weightSum="3">
 
             <TextView
-                android:layout_weight="1"
+                android:layout_weight="1.6"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="L"
+                android:text="@string/team"
                 android:layout_gravity="center"
-                android:id="@+id/tv_t_2"/>
+                android:id="@+id/tv_ot1"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp" />
 
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="D"
-                android:layout_gravity="center"
-                android:id="@+id/tv_t_3"/>
+                android:orientation="horizontal"
+                android:weightSum="9.7"
+                android:layout_weight="1.3">
 
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="P"
-                android:layout_gravity="center"
-                android:id="@+id/tv_t_4"/>
 
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="B"
-                android:layout_gravity="center"
-                android:id="@+id/tv_t_5"/>
+                <TextView
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="W"
+                    android:layout_gravity="center"
+                    android:id="@+id/tv_t_1"
+                    tools:ignore="NestedWeights" />
 
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="F"
-                android:layout_gravity="center"
-                android:id="@+id/tv_t_6"/>
+                <TextView
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="L"
+                    android:layout_gravity="center"
+                    android:id="@+id/tv_t_2"/>
 
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="A"
-                android:layout_gravity="center"
-                android:id="@+id/tv_t_7"/>
+                <TextView
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="D"
+                    android:layout_gravity="center"
+                    android:id="@+id/tv_t_3"/>
 
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="GD"
-                android:layout_gravity="center"
-                android:id="@+id/tv_t_8"/>
+                <TextView
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="P"
+                    android:layout_gravity="center"
+                    android:id="@+id/tv_t_4"/>
 
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/score"
-                android:layout_gravity="center"
-                android:id="@+id/tv_t_9"/>
+                <TextView
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="B"
+                    android:layout_gravity="center"
+                    android:id="@+id/tv_t_5"/>
+
+                <TextView
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="F"
+                    android:layout_gravity="center"
+                    android:id="@+id/tv_t_6"/>
+
+                <TextView
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="A"
+                    android:layout_gravity="center"
+                    android:id="@+id/tv_t_7"/>
+
+                <TextView
+                    android:layout_weight="1.2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="GD"
+                    android:layout_gravity="center"
+                    android:id="@+id/tv_t_8"/>
+
+                <TextView
+                    android:layout_weight="1.5"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/score"
+                    android:layout_gravity="center"
+                    android:id="@+id/tv_t_9"/>
+            </LinearLayout>
         </LinearLayout>
-
     </LinearLayout>
 
     <LinearLayout
@@ -208,7 +217,7 @@
         android:elevation="3dp"
         android:orientation="horizontal"
         android:background="@drawable/textshape"
-        android:layout_below="@+id/ll_third"
+        android:layout_below="@+id/ll_landscape"
         android:layout_margin="5dp">
 
         <ImageView
