--- a/app/src/main/res/layout/fragment_ladders.xml
+++ b/app/src/main/res/layout/fragment_ladders.xml
@@ -11,7 +11,8 @@
         android:orientation="vertical"
         android:background="@drawable/shape_ladder"
         android:id="@+id/ll_main"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -50,7 +51,7 @@
         android:layout_below="@+id/ll_main"
         android:layout_margin="10dp"
         android:background="@android:color/transparent"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <TextView
             android:layout_weight="3.2"
@@ -218,7 +219,8 @@
         android:orientation="horizontal"
         android:background="@drawable/textshape"
         android:layout_below="@+id/ll_landscape"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="30dp"
@@ -237,4 +239,26 @@
             android:gravity="center|left"/>
     </LinearLayout>
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/empty"
+        android:src="@drawable/group_list_empty"
+        android:visibility="gone" />
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/swiperefresh">
+
+        <ListView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:verticalSpacing="0dp"
+            android:horizontalSpacing="0dp"
+            android:numColumns="2"
+            android:layout_margin="10dp"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
