--- a/app/src/main/res/layout/ladder_cell.xml
+++ b/app/src/main/res/layout/ladder_cell.xml
@@ -3,28 +3,153 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/myImageView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/splashlogo"
-        android:scaleType="fitXY"
-        android:visibility="gone"/>
+        android:orientation="horizontal"
+        android:weightSum="6"
+        android:id="@+id/ll_first"
+        android:layout_margin="10dp"
+        android:background="@android:color/transparent"
+        android:visibility="visible">
 
-    <TextView
-        android:layout_below="@+id/myImageView"
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        <TextView
+            android:layout_weight="3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/team"
+            android:layout_gravity="center"
+            android:id="@+id/tv"
+            android:layout_marginLeft="10dp"/>
+
+        <TextView
+            android:layout_weight="0.5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="W"
+            android:padding="5dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:id="@+id/tv1"/>
+
+        <TextView
+            android:layout_weight="0.5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="L"
+            android:padding="5dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:id="@+id/tv2"/>
+
+        <TextView
+            android:layout_weight="0.5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="D"
+            android:padding="5dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:id="@+id/tv3"/>
+
+        <TextView
+            android:layout_weight="0.5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="P"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:id="@+id/tv4"
+            android:padding="5dp"/>
+
+        <TextView
+            android:layout_weight="0.8"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/score"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:id="@+id/tv5"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="5dp"
-        android:layout_centerInParent="true"
-        android:text="Text 1"
-        android:textColor="@color/black"
-        android:fontFamily="@font/lato_regular"
-        android:textStyle="bold"
-        android:singleLine="false"
-        android:textSize="14sp"
-        android:visibility="visible"
-        />
+        android:orientation="horizontal"
+        android:weightSum="4.9"
+        android:id="@+id/ll_second"
+        android:layout_below="@+id/ll_first"
+        android:layout_margin="10dp"
+        android:background="@android:color/transparent"
+        android:visibility="visible">
+
+        <ImageView
+            android:id="@+id/myImageView"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/splashlogo" />
+
+        <TextView
+            android:layout_weight="2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/team"
+            android:singleLine="true"
+            android:maxLines="1"
+            android:layout_gravity="center"
+            android:id="@+id/tvteam"
+            android:textColor="@color/black"
+            android:fontFamily="@font/lato_regular"
+            android:layout_marginLeft="10dp"
+            android:gravity="left|center"/>
+
+        <TextView
+            android:layout_weight="0.5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="W"
+            android:padding="5dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:id="@+id/tvWon"/>
+
+        <TextView
+            android:layout_weight="0.5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="L"
+            android:padding="5dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:id="@+id/tvLost"/>
+
+        <TextView
+            android:layout_weight="0.5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="D"
+            android:padding="5dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:id="@+id/tvDrawn"/>
+
+        <TextView
+            android:layout_weight="0.5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="P"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:id="@+id/tvPlayed"
+            android:padding="5dp"/>
+
+        <TextView
+            android:layout_weight="0.8"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/score"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:id="@+id/tvPoints"/>
+    </LinearLayout>
 </RelativeLayout>
