--- a/app/src/main/res/layout/fragment_ladders.xml
+++ b/app/src/main/res/layout/fragment_ladders.xml
@@ -72,12 +72,17 @@
             android:id="@+id/tv5"/>
     </LinearLayout>
 
-    <ImageView
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/empty"
-        android:src="@drawable/group_list_empty"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:textColor="@color/black"
+        android:text="No Data Found On Ladders"
+        android:gravity="center"
+        android:layout_centerInParent="true"
+        android:fontFamily="@font/lato_regular"
+        android:textStyle="bold"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -88,7 +93,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/textshape"
-        android:elevation="10dp">
+        android:elevation="10dp"
+        android:visibility="visible">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
@@ -102,8 +108,7 @@
             android:verticalSpacing="0dp"
             android:horizontalSpacing="0dp"
             android:numColumns="2"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp" />
+            />
 
     </android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
