--- a/app/src/main/res/layout/ladder_cell.xml
+++ b/app/src/main/res/layout/ladder_cell.xml
@@ -13,7 +13,9 @@
         android:id="@+id/ll_first"
         android:layout_margin="10dp"
         android:background="@android:color/transparent"
-        android:visibility="visible">
+        android:visibility="visible"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp">
 
         <TextView
             android:layout_weight="3"
@@ -22,6 +24,10 @@
             android:text="@string/team"
             android:layout_gravity="center"
             android:id="@+id/tvteam"
+            android:paddingTop="10dp"
+            android:textColor="@color/black"
+            android:fontFamily="@font/lato_regular"
+            android:paddingBottom="10dp"
             android:layout_marginLeft="10dp"/>
 
         <TextView
@@ -31,6 +37,8 @@
             android:text="0"
             android:padding="5dp"
             android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:fontFamily="@font/lato_regular"
             android:gravity="center"
             android:id="@+id/tvwin"/>
 
@@ -41,6 +49,8 @@
             android:text="0"
             android:padding="5dp"
             android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:fontFamily="@font/lato_regular"
             android:gravity="center"
             android:id="@+id/tvlost"/>
 
@@ -51,6 +61,8 @@
             android:text="0"
             android:padding="5dp"
             android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:fontFamily="@font/lato_regular"
             android:gravity="center"
             android:id="@+id/tvdrawn"/>
 
@@ -61,6 +73,8 @@
             android:text="0"
             android:gravity="center"
             android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:fontFamily="@font/lato_regular"
             android:id="@+id/tvplayed"
             android:padding="5dp"/>
 
@@ -70,6 +84,8 @@
             android:layout_height="wrap_content"
             android:text="@string/score"
             android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:fontFamily="@font/lato_regular"
             android:gravity="center"
             android:id="@+id/tvpoints"/>
     </LinearLayout>
