--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,7 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
-                    android:text="@string/prompt_name"
+                    android:text="@string/prompt_email"
                     android:textStyle="bold"
                     android:layout_marginBottom="10dp"/>
 
