--- a/app/src/main/res/layout/custom_dialogbox_register.xml
+++ b/app/src/main/res/layout/custom_dialogbox_register.xml
@@ -1,29 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="350dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@color/white">
-
-
-    <TextView
-        android:id="@+id/tvHeading"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Welcome to Baseball NSW"
-        android:background="@color/colorPrimary"
-        android:padding="20dp"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:textStyle="normal"
-        android:fontFamily="@font/lato_regular"
-        />
 
     <TextView
         android:id="@+id/tvTextTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter Group Name"
-        android:layout_below="@+id/tvHeading"
+        android:text="We will Send you email!"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="15dp"
         android:textColor="@color/black"
@@ -33,45 +18,15 @@
         />
 
 
-    <TextView
-        android:id="@+id/tvMessage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/tv_message"
-        android:layout_below="@+id/tvTextTitle"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="15dp"
-        android:textColor="@color/dark_gray"
-        android:singleLine="false"
-        android:lines="5"
-        android:textStyle="normal"
-        android:fontFamily="@font/lato_italic"
-        android:textSize="14sp"/>
-
-
-
-
-    <Button
-        android:id="@+id/btn_dialog"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Done"
-        android:background="@android:color/transparent"
-        android:textColor="@color/colorPrimary"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginBottom="15dp"/>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/black"
-        android:layout_below="@id/tvMessage"
         android:id="@+id/inputtextGroupName"
         android:layout_marginTop="5dp"
         android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp">
+        android:layout_marginLeft="15dp"
+        android:layout_below="@+id/tvTextTitle">
 
         <EditText
             android:id="@+id/etName"
@@ -83,14 +38,28 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:fontFamily="@font/lato_regular"
-            android:hint="Enter Group Name"
+            android:hint="Enter Email ID"
             android:imeOptions="actionNext"
             android:inputType="text"
             android:maxLines="1"
+            android:textColorHint="@color/gray"
             android:nextFocusDown="@+id/password"
             android:nextFocusForward="@+id/password"
             android:singleLine="true" />
 
     </android.support.design.widget.TextInputLayout>
+
+
+    <Button
+        android:id="@+id/btn_dialog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Done"
+        android:background="@android:color/transparent"
+        android:textColor="@color/colorPrimary"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginBottom="15dp"
+        android:layout_below="@+id/inputtextGroupName"/>
 
 </RelativeLayout>
