--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:actionMenuTextColor">@color/white</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
 
@@ -15,6 +17,7 @@
     </style>
 
     <style name="transparentbutton" parent="@android:style/Widget.Button">
+        <item name="android:actionMenuTextColor">@color/white</item>
         <item name="android:gravity">center_vertical|center_horizontal</item>
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:shadowColor">#FF000000</item>
