--- a/app/src/main/res/layout/activity_main_tabbing.xml
+++ b/app/src/main/res/layout/activity_main_tabbing.xml
@@ -48,6 +48,19 @@
                 android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="SETTINGS"
+                android:id="@+id/tv_left"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="12sp"
+                android:padding="10dp"
+                android:gravity="left"
+                android:layout_gravity="left"/>
+
+            <TextView
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Title"
                 android:id="@+id/tv_end"
                 android:textColor="@color/white"
