--- a/app/src/main/res/layout/fragment_notice_board.xml
+++ b/app/src/main/res/layout/fragment_notice_board.xml
@@ -13,11 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/empty"
-        android:src="@drawable/noticeboard_empty"
-        android:visibility="gone"
-        android:scaleType="fitCenter"
-        android:padding="10dp"
-        android:layout_margin="10dp"/>
+        android:src="@drawable/noticeboard_empty_baseball"
+        android:visibility="gone" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -31,12 +28,10 @@
             tools:context=".NoticeBoardVC"
             android:id="@+id/swiperefresh">
 
-
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/list"/>
-
 
         </android.support.v4.widget.SwipeRefreshLayout>
     </ScrollView>
