--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,28 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent">
 
     <ImageView
         android:id="@+id/iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:src="@drawable/splashlogo"
+        android:background="@android:color/transparent"
         android:layout_centerInParent="true"
         android:layout_margin="15dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/iv"
         android:layout_alignParentBottom="true"
-        android:text="@string/company_title"
-        android:textSize="15sp"
-        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:padding="5dp"
-        android:layout_centerInParent="true"
-        android:layout_margin="5dp"
-        android:textColor="@color/colorPrimary"/>
+        android:padding="10dp"
+        android:text="@string/company_title"
+        android:textColor="@color/black"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/lato_regular"
+        android:textStyle="normal"/>
+
 </RelativeLayout>
